--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
 
 .navbar {
   background-color: #171717;
+  border-bottom: 1px solid #333;
 }
 
 .nav-item {
@@ -72,10 +73,52 @@ body {
   opacity: 1;
 }
 
-.col-4 {
-  text-align: right;
+/* Breadcrumb */
+
+.breadcrumb {
+  margin-top: 100px;
 }
 
-nav.nav.justify-content-end a.nav-link {
-  padding-right: 0px;
+.product-thumbnail-container {
+  background-color: white;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+  width: 360px;
+  padding: 8px;
+  margin: auto;
+  transform: translateY(-45px);
+}
+
+.product-thumbnail-container a:hover {
+  text-decoration: none;
+}
+
+.btn-product {
+  margin: 50px 0px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #eaeaef;
+}
+
+.btn-product .btn {
+  display: block;
+  margin: 10px 0;
+}
+
+.designed-by h5 {
+  font-size: 14px;
+  font-weight: 200;
+  color: #b7b7b7;
+  margin-bottom: 20px;
+}
+
+.designed-by h4 {
+  font-size: 18px;
+  color: #171717;
+}
+
+.designed-by p {
+  font-size: 14px;
+}
+
+.designed-by p span {
+  color: #b7b7b7;
 }
