menambahkan dan membuat halaman cart

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@ body {
 
 .features h3,
 .designer h3,
-.similar-product h3 {
+.similar-product h3,
+.cart-header h3,
+.checkout-modal-success h3 {
   font-family: 'Lora';
   color: #1b2690;
   font-weight: bold;
@@ -47,7 +49,9 @@ body {
 .features p,
 .designer p,
 .footer p,
-.similar-product p {
+.similar-product p,
+.cart-header p,
+.checkout-modal-success p {
   font-weight: 200;
   color: #b7b7b7;
 }
@@ -79,6 +83,10 @@ body {
 
 .breadcrumb {
   margin-top: 100px;
+}
+
+.cart-breadcrumb {
+  margin-top: 50px;
 }
 
 .product-thumbnail-container {
@@ -164,4 +172,10 @@ body {
 .similar-product {
   margin-top: 180px;
   margin-bottom: 100px;
+}
+
+.checkout-detail {
+  background-color: #f6f7fb;
+  border: 1px solid #eaeaea;
+  color: #171717;
 }
